[UTF-8][Japanese]

*Ver3.0 RC1 : 2015/07/2x

-[bf:テーマがたくさん増えました。]((今回の更新で大半の時間を要しました。協力者求むだったのですが、結局一人作業になりましてとても疲れました（苦笑）。なんかいいテーマできたらどんどん公開してください。))
-[http://adiary.org/devman/theme/:テーマ開発マニュアル]をまとめました。
-ログイン時のIP/HOST制限機能が付きました。
-コメント欄のロボットSPAM対策を強化しました。((JavaScriptを解釈するロボットSPAMが出たとしても大丈夫だと思います。不可能ではないものの、かなり投稿しにくくなっています。))
-コメント欄でタブや空白が有効になりました。{{&amp;}}等の実体参照が無効になりました。
-コメント本文の加工処理をJavaScript側に変更しました。
-コンテンツタイプで検索できるようになりました。
-タグなし記事を検索できるようになりました。
-タグや記事タイトル中の{{&}}をエスケープするようにしました。
-検索のデフォルトを「全文」に変更しました。
-記事一覧とコメント一覧画面でソートできるようになりました。
-記事一覧画面に記事種類を出力するようにしました。（[http://adiary.blog.abk.nu/0366#com:Thanks to 手石]）
-最近の記事一覧と過去ログに、コンテンツを含めない設定を追加しました。（Thanks to 手石]）
-印刷用リンクを別ページで開く設定ができるようにしました。（Thanks to 手石]）
-コメント欄に{{&gt;}}等の実体参照文字列を書き込んだ時、そのまま表示されるように変更しました。（Thanks to 手石）
-[g:respond.js]から[g:css3-mediaqueries.js]に変更しました。
-シンタックスハイライトのテーマを変更しました。またhighlight.jsのロード方法も変更しました。
-記法タグでの「google」や「wikipedia」のリンク先をhttpsに変更しました。GoogleのリンクQueryも少し変更しました。
-はてなブックマーク等のソーシャルボタンの表示を高速化しました。
-【テーマ】配色カスタマイズ画面で、色を濃くしたり明るくしたりできるようにしました。((色を薄くまたは暗くしかできなかったという（苦笑）))
-【テーマ】オプションによる配置変更などが実現可能な機能をつけました。((satsuki-multisideといったフォルダ（テーマ）を作らなくて済むようになりました。))
-【テーマ】あらゆる出力から{<input type="submit">, <input type="button">}を廃止しました。
-【テーマ】satsuki2系テーマで、サイドバーサイズを固定にしました。
-【テーマ】satsuki2-multiside テーマを廃止してウィンドウ横幅によりマルチサイドバーにする satsuki2-resp に変更しました。
-【テーマ】CSSでの #hatena-body の高さ自動設定機能に min-height が効くようになりました。
-【テーマ】テーマの表示テスト画面を作りました。
-【テーマ】テーマの配色可変対応をより作りやすくしました。
-【テーマ】色々と問題の多い「JavaScriptによるBox高さの自動調整」をやめました。
-【fix】テーマ配色のリセット後、HSVバーを動かすと色基準が「現在のテーマ設定値」になっていた。
-【fix】adiary形式でexportするとき、入力テキストに「&lt;」などの実体参照が正しくエスケープされていなかった。((Version2時代からあったバグのようですのでたぶんずっと最初から……。))
-【fix】Version2からの移行ツール使用時、コンテンツのツリー構造がうまく引き継げない。
-【fix】pkey保存インポートをすると、コンテンツツリーを復元できない。
-【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
-【fix】行連結記法が使えない。((β3直後に完全にエンバグしてました。必要処理をなぜか１行削除するというコピペ操作ミスだと思われます、恥ずかしい（汗）))
-【fix】たまにタグ一覧やコンテンツ一覧でキャッシュされた情報を読み込んでしまう。
-【fix】Markdown記法でインラインのソースコード記述で、{<, >, &}がうまくエスケープされない。（Thanks to 手石]）