@@ -5,6 +5,7 @@
 System_coding=UTF-8
 Code_lib=Jcode
 Locale=ja
+Locale2=ja_JP
 #-----------------------------------------------------------
 # message
 #-----------------------------------------------------------
