@@ -86,7 +86,7 @@
 <$end>
 <@ifexec(ps.titleimg, begin)>
 	display:		inline-block;
-	background-image:	url('<@v.plugin_image_path(ps.titleimg)>?<@TM>');
+	background-image:	url('<@Basepath><@v.plugin_image_dir(ps.titleimg)>?<@TM>');
 	background-position:	0 0;
 	padding:		0;
 	border:			0;
@@ -114,7 +114,7 @@
 	background-color:	<@ps.bg>;
 <$end>
 <@ifexec(ps.bgfile, begin)>
-	background-image:	url('<@v.plugin_image_path(ps.bgfile)>?<@TM>');
+	background-image:	url('<@Basepath><@v.plugin_image_dir(ps.bgfile)>?<@TM>');
 	background-position:	center;
 	<@ifexec(ps.bgfile_fit && ps.bgfile_h, begin)>
 	min-height:		<@ps.bgfile_h - ps.padding0 - ps.padding2>px;
