@@ -49,7 +49,7 @@
 <$end>
 <@> ショートカットアイコン
 <@ifexec(s.iconfile, begin)>
-<link rel="shortcut icon" href="<@s.iconfile>">
+<link rel="shortcut icon" href="<@Basepath><@s.iconfile>">
 <$end>
 <@>
 <!-- JavaScript ============================================-->
