@@ -33,6 +33,6 @@
 	<a href="<@v.myself>"><@if(v.title_h1, v.title_h1, v.title)></a>
 </h1>
 
-<@viewtest_append_header>
+<@viewtest_add_header>
 <@>$FOOTER$--------------------------------------------------------------------
 </div></header>
