@@ -12,6 +12,12 @@
 <$art_mon  = ret.mon || ret.art_mon>
 <$art_day  = ret.day>
 
+<@> OGP/Twitter Cards
+<$ifexec(Develop || index(ENV.HTTP_USER_AGENT, 'Mozilla/')<0, begin)>
+	<$call('_sub/set_ogp', 'website', v.myself)>
+<$end>
+
+
 <@> dayモードでの処理
 <$ifexec(ret.mode eq 'day', begin)>
 	<$v.no_robots=1>
