@@ -9,7 +9,7 @@
 
 <$v.regist_js("<@v.script_dir>design-edit.js")>
 
-<$v.append_header(exec(begin))>
+<$v.add_header(exec(begin))>
 <style>
 * {
 	margin:		0;
