@@ -10,7 +10,7 @@
 <@> システムモード
 <$v.special_system_mode("デザインの初期化")>
 
-<$v.append_header(exec(begin))>
+<$v.add_header(exec(begin))>
 <style>
 * {
 	margin:		0;
