@@ -12,7 +12,7 @@
 
 <$v.regist_js("<@v.script_dir>theme-custom.js")>
 
-<$v.append_header(exec(begin))>
+<$v.add_header(exec(begin))>
 <style>
 * {
 	margin:		0;
