@@ -10,7 +10,7 @@
 
 <@><!--=====================================================================-->
 <@> dropdown-menu
-<$viewtest_append_header = exec(begin)>
+<$viewtest_add_header = exec(begin)>
 <div class="dropdown-menu">
 <ul class="js-auto-width">
 	<li><a href="#">はじめに</a>
