@@ -4,6 +4,7 @@
 
 -[bf:テーマがたくさん増えました。]((今回の更新で大半の時間を要しました。協力者求むだったのですが、結局一人作業になりましてとても疲れました（苦笑）。なんかいいテーマできたらどんどん公開してください。))
 -[http://adiary.org/devman/theme/:テーマ開発マニュアル]をまとめました。
+-Facebook OGP/Twitter Cardsに対応しました。((デバッグが十分ではないのでどなたか検証してください。))
 -ログイン時のIP/HOST制限機能が付きました。
 -コメント欄のロボットSPAM対策を強化しました。((JavaScriptを解釈するロボットSPAMが出たとしても大丈夫だと思います。不可能ではないものの、かなり投稿しにくくなっています。))
 -コメント欄でタブや空白が有効になりました。{{&amp;}}等の実体参照が無効になりました。
@@ -42,7 +43,7 @@
 -【fix】コメントが許可されていない FrontPage がある状態でデザイン編集を保存すると、コメント投稿フォームが消える。
 -【fix】コメントメール通知プラグインが動かなくなっていた。
 -【fix】ブラウザ上で「横320px」のスマートフォン（iPhone 5等）でスマホメニューの表示が崩れる。（[https://twitter.com/ave_sp/status/617230968248664064:Thanks to 阿部]）
--【fix】コメント番号が書き込み順にならないことがあるバグを修正。β初期からあるバグでした……。
+-【fix】コメント番号が書き込み順にならないことがある。β初期からあるバグでした……。
 -【fix】プライベートモード切替時、テーマのカスタマイズが無効になっていた。
 -【fix】スマホ表示でブログ設定などのフォームがはみ出していた。
 -【fix】さつき記法で、2行以上の「th（thead）」に対応していなかった。
